<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text=" Movies Sorted By Categories "
        android:textColor="#FFF"
        android:textSize="25dp"
        android:background="@drawable/gradient_normal"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/top_rated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="movieCategoryClick"
        android:orientation="horizontal"
        tools:ignore="OnClick">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/my_image_description"
                android:src="@drawable/toprated" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/breaking_title"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:text="@string/top_rated_text_string" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="movieCategoryClick"
        android:orientation="horizontal"
        tools:ignore="OnClick">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/my_image_description"
                android:src="@drawable/popular" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/popular_string"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:text="@string/popular_text_string" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="movieCategoryClick"
        android:orientation="horizontal"
        tools:ignore="OnClick">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/my_image_description"
                android:src="@drawable/action" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/action_string"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:text="@string/action_text_string" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.widget.Button
            android:id="@+id/btnlogout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_marginTop="68dp"
            android:background="@drawable/gradient_normal"
            android:drawableLeft="@drawable/ic_baseline_login_24"
            android:padding="5dp"
            android:text=" logout"
            android:textColor="#FFF"
            android:textStyle="bold"
            />
    </LinearLayout>
</LinearLayout>